Start rework of slo checks